Implemented Publish and SendCommand for bankingMicroservice

--- a/MicroRabbit.Banking.Api/appsettings.json
+++ b/MicroRabbit.Banking.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BankingDbConnection": "Server=.;Database=BankingDB;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "BankingDbConnection": "Server=DL5M3N2F3\\SQLEXPRESS;Database=BankingDB;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
